--- a/assembly/local/conf/app.properties
+++ b/assembly/local/conf/app.properties
@@ -1,3 +1,3 @@
-application.name=easy-logger
-application.main=me.qiancheng.qianworks.easylogger.Application
+application.name=annotation-logger
+application.main=me.qiancheng.qianworks.logger.Application
 application.owner=Joseph
