--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,14 @@
   </parent>
 
   <groupId>me.qiancheng</groupId>
-  <artifactId>easy-logger</artifactId>
+  <artifactId>annotation-logger</artifactId>
   <version>1.0</version>
   <name>${project.artifactId}</name>
   <description>${project.artifactId}</description>
   <url>https://github.com/iqiancheng/${project.artifactId}</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <start-class>me.qiancheng.qianworks.easylogger.Application</start-class>
+    <start-class>me.qiancheng.qianworks.logger.Application</start-class>
     <java.version>1.7</java.version>
     <junit.version>4.12</junit.version>
     <mysql.version>5.1.17</mysql.version>
